# Spotify-Ad-Blocker

./: .gitignore  README.md
EZBlocker/EZBlocker/: EZBlocker.csproj  EZBlockerMain.Designer.cs  EZBlockerMain.cs  EZBlockerMain.resx
src/: App.config  App.xaml  App.xaml.cs  AudioUtils.cs  CMakeLists.txt  EZBlockerMain.Designer.cs  EZBlockerMain.cs  EZBlockerMain.resx  MainWindow.xaml  MainWindow.xaml.cs  MediaHook.cs
src/Properties/: AssemblyInfo.cs  Settings.Designer.cs  Settings.cs  Settings.settings  strings.Designer.cs  strings.resx
